# proud_color_sorter

./: .clang-format  .clang-tidy  .format_code.sh  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake.yml
cmake/: ClangTidy.cmake  CompilerWarnings.cmake  FetchCLI11.cmake  FetchGtest.cmake  Sanitizers.cmake
src/: color.hpp  counting_sort.cpp  counting_sort.hpp  main.cpp  mpsc_queue.hpp  order.hpp  spsc_queue.hpp
src/concurrent/: mpmc_queue.hpp  static_thread_pool.cpp  static_thread_pool.hpp
src/utils/: app.cpp  app.hpp  channel.cpp  channel.hpp  color_formatter.hpp  daemon_main.cpp  daemon_main.hpp  random_generator.hpp
tests/: CMakeLists.txt  color_formatter_tests.cpp  counting_sort_tests.cpp  daemon_main_tests.cpp  mpmc_queue_tests.cpp  mpsc_queue_tests.cpp  order_tests.cpp  spsc_queue_tests.cpp  utils.hpp
